# hal_ambiq

./: CMakeLists.txt  README.md  README.rst
mcu/: CMakeLists.txt  Makefile  am_sdk_version.h
mcu/apollo2/: CMakeLists.txt  am_mcu_apollo.h
mcu/apollo2/hal/: Makefile  am_hal_adc.c  am_hal_adc.h  am_hal_cachectrl.c  am_hal_cachectrl.h  am_hal_clkgen.c  am_hal_clkgen.h  am_hal_ctimer.c  am_hal_ctimer.h  am_hal_debug.c  am_hal_debug.h  am_hal_flash.c  am_hal_flash.h  am_hal_global.c  am_hal_global.h  am_hal_i2c_bit_bang.c  am_hal_i2c_bit_bang.h  am_hal_interrupt.c  am_hal_interrupt.h  am_hal_iom.c  am_hal_iom.h  am_hal_ios.c  am_hal_ios.h  am_hal_itm.c  am_hal_itm.h  am_hal_mcuctrl.c  am_hal_mcuctrl.h  am_hal_otp.c  am_hal_otp.h  am_hal_pdm.c  am_hal_pdm.h  am_hal_pin.h  am_hal_pwrctrl.c  am_hal_pwrctrl.h  am_hal_queue.c  am_hal_queue.h  am_hal_reset.c  am_hal_reset.h  am_hal_rtc.c  am_hal_rtc.h  (+16 more)
mcu/apollo2/regs/: am_reg_adc.h  am_reg_base_addresses.h  am_reg_cachectrl.h  am_reg_clkgen.h  am_reg_ctimer.h  am_reg_flashctrl.h  am_reg_gpio.h  am_reg_iomstr.h  am_reg_ioslave.h  am_reg_itm.h  am_reg_jedec.h  am_reg_macros.h  am_reg_macros_asm.h  am_reg_mcuctrl.h  am_reg_nvic.h  am_reg_pdm.h  am_reg_pwrctrl.h  am_reg_rstgen.h  am_reg_rtc.h  am_reg_sysctrl.h  am_reg_systick.h  am_reg_tpiu.h  am_reg_uart.h  am_reg_vcomp.h  am_reg_wdt.h
mcu/apollo3/: CMakeLists.txt  Makefile  am_mcu_apollo.h
mcu/apollo3p/: CMakeLists.txt  Makefile  am_mcu_apollo.h
mcu/apollo4p/: CMakeLists.txt  Makefile  am_mcu_apollo.h
mcu/apollo510/: CMakeLists.txt  Makefile  am_mcu_apollo.h
(+581 files in other folders)
